# pony-agent

./: .gitignore  .gitmodules  AGENT.md  Cargo.toml  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.githooks/: pre-commit  pre-push
coverage/: coverage-summary.json
crates/pony-agent-core/: Cargo.toml
crates/pony-agent-core/src/agent/: context.rs  control_plane.rs  graph.rs  hooks.rs  mod.rs  provider.rs  runtime.rs  secret_store.rs  session.rs  sse_adapter.rs  telemetry.rs  tools.rs  turn_flow.rs
docs/: INDEX.md  codex-hermes-claude-code-对比说明.md  context-compaction-principles.md  design-foundations.md  repo-comparison-index.md  tauri-rust-refactor.md
docs/analysis/: trace-redteam-2026-06-01.md
docs/architecture/: context-state-subsystem.md  frontend-workbench.md  overview.md  runtime.md  session-control-plane-and-audit-surface.md  terminology.md  turn-lifecycle-hooks-and-recovery.md
docs/decisions/: 0001-dual-track-rebuild-with-hermes-reference.md  0002-tauri-ui-over-tui.md  0003-frontend-stack-vue-pinia-no-router.md  0004-frontend-shell-workbench-direction.md  0005-visual-direction-warm-minimalism.md  0006-api-key-evolution-env-first.md  0007-cache-hit-as-first-class-product-metric.md  README.md
docs/design/: INDEX.md  app-icon.md  product-ui-spec.md
docs/guides/: e2e-system-test-plan.md  frontend-layout-and-observability-boundary.md  frontend.md  rust-agent.md
docs/learning/: 0001-learning-mode-rebuild-overview.md  0002-frontend-stack-vue-pinia-no-router.md  0003-tauri-ui-over-tui-for-agent-debugging.md  0004-rust-environment-basics.md  0005-rust-hello-world-basics.md  0006-run-turn-while-loop-react.md  0008-blank-screen-and-ui.md  (+16 more)
openspec/: config.yaml
scripts/: generate_app_icons.py  git-guard.ps1  invoke-rust-target.ps1  start-tauri-dev.ps1  trace-timing-redteam.ps1
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sse_adapter.rs  tauri_adapter.rs
src-tauri/src/agent/: capability_bridge.rs  config.rs  context.rs  control_plane.rs  execution_control.rs  graph.rs  input.rs  mod.rs  planner.rs  provider.rs  runtime.rs  secret_store.rs  session.rs  telemetry.rs  tools.rs  turn_flow.rs
src-tauri/tests/: provider_registry_regression.rs  session_regression.rs  tool_router_regression.rs
tests/: App.spec.ts  HomeSessionSidebar.spec.ts  HomeSidebar.spec.ts  HomeWorkspace.spec.ts  HomeWorkspaceMarkdown.spec.ts  ModelMonitorPage.spec.ts  Switch.spec.ts  markdown.spec.ts  providers.store.spec.ts  runtime-store.spec.ts  tauri-icon-regression.spec.ts
tmp/: opencode-review-stream-fix-prompt.txt  opencode-stream-diagnosis-final.json  opencode-stream-diagnosis-prompt.txt  opencode-stream-diagnosis.json  speed-diff.patch  stream-e2e-metrics.json  stream-fix-verify.json
(+336 files in other folders)
