[package]
name = "pony-agent"
version = "0.1.0"
description = "Tauri + Rust rewrite scaffold for Hermes Agent"
authors = ["HUAWEI"]
edition = "2021"

[lib]
name = "pony_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
