[package]
name = "pony-agent"
version = "0.1.0"
description = "Tauri + Rust rewrite scaffold for Hermes Agent"
authors = ["HUAWEI"]
edition = "2021"
default-run = "pony-agent"

[lib]
name = "pony_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
